Fix gap in type-title

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -125,7 +125,7 @@ button.active {
 }
 
 .about-title::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 15%;
   left: 0;
@@ -252,19 +252,11 @@ td {
 }
 
 .arrow-left:hover {
-  background-image: linear-gradient(
-    to left,
-    transparent,
-    rgba(45, 100, 114, 0.7)
-  );
+  background-image: linear-gradient(to left, transparent, rgba(45, 100, 114, 0.7));
 }
 
 .arrow-right:hover {
-  background-image: linear-gradient(
-    to right,
-    transparent,
-    rgba(45, 100, 114, 0.7)
-  );
+  background-image: linear-gradient(to right, transparent, rgba(45, 100, 114, 0.7));
 }
 
 @media only screen and (max-width: 500px) {
@@ -298,7 +290,7 @@ td {
 }
 
 #empty-margin {
-  content: " ";
+  content: ' ';
   display: block;
   min-width: 30px;
   min-height: 200px;
@@ -362,7 +354,7 @@ td {
 }
 
 .movie-title::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -398,7 +390,7 @@ td {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 700;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.2px;
   background-color: var(--main);
   /* transition: opacity 0.5s; */
 }
@@ -417,10 +409,10 @@ td {
 }
 
 .type-title::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
-  left: -22px;
+  left: -21px;
   border: 11px solid transparent;
   border-top-color: var(--main);
   border-right-color: var(--main);
@@ -544,7 +536,7 @@ td {
 }
 
 .movie-active-title::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 5%;
   left: 0;
